--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ wp-config.php
 #
 # Note: If you wish to whitelist plugins,
 # uncomment the next line
-#/wp-content/plugins
+/LocalSite/pacificmall/app/public/wp-content/plugins
 
 # All themes
 #
