--- a/MusicSchool/package.json
+++ b/MusicSchool/package.json
@@ -13,6 +13,7 @@
     "css-mqpacker": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0"
   }
